# demo

./: .gitignore  .gitmodules  index.md  readme.md
CoffeeRun/: readme.md
CoffeeRun/scripts/: checklist.js  datastore.js  formhandler.js  truck.js
archive/gui-vedio-play/: main.py  readme.md  tempCodeRunnerFile.py
archive/imu-chess-work/: 0x08_dalao.py
archive/imudge_index/: SignIn.html  SignUp.html  index.html
aweUseless/: voidDock.py
coffeerun/: readme.md
complier/scriptMaker/: readme.md
docker/: readme.md
flask-tutorial/: README.md  setup.py
flask-tutorial/flaskr/: __init__.py  auth.py  db.py
flask-tutorial/test/: test_db.py
flaskr/: __init__.py  auth.py  blog.py
front_end/imudge_index/: Self.html
gomoku/: main.py  readme.md
langStack/py/: notes.ipynb
makeDemo/: CMakeLists.txt  hello  readme.md  text.c
projects/coffeerun/: index.html
projects/data/: block.json
script/: Start Here in Windows.bat  Start Here in Windows.ps1  auto-input-survery-wenjuanxin.py  bgmNotification.py  binary_to_base64_encoding.py  convert_binary_to_base64_encoding.py  demoBs4.py  move_double_layers_path_together.py  notes.ipynb  old_readme.md  readme.ipynb  readme.md  rm_empty_dir.py
script/cppScript/: howLongUdelay.cpp
script/imu_chess_work/: 0x04.py  0x05.py  0x06.py  0x07.py  0x08.py  0x09.py
script/py/: check_same_pics.py  text_shell.py  (+1 more)
scripts/: readme
tasks/: readme
template/: readme.md  template.java  template.py  template.sh
tools/: name.md  site.md
tools/command/cmake/: CMakeLists.txt
tools/command/cmake/src/: mylib.c  mylib.h
(+592 files in other folders)
